@@ -265,6 +265,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
      - Canon inkjet printers:
 
+       Canon   BJC S330   (EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
